--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "scss": "sass --watch ./scss/_style.scss ./css/style.css"
+    "scss": "sass --watch ./scss/_-style.scss ./css/style.css"
   },
   "author": "Gio Lui",
   "license": "ISC"
